# FFmpegDemo

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/wanbin/ffmpegmusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVideo.cpp  FFmpegVideo.h  log.h  native-lib.cpp
app/src/main/java/com/example/wanbin/ffmpegmusic/: DavidPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wanbin/ffmpegmusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
